# genome

./: Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  release.toml
.github/workflows/: ci.yml  publish.yml
scripts/: fix-pkg.js  release.js  sync-release.js
src/: lib.rs
tests/: integration.rs
